# kopilot-core

./: .gitignore  README.md  SKILL.md  pyproject.toml
kopilot_core/: __init__.py  __main__.py  bus.py  cli.py  db.py  log.py  module.py  runtime.py  scheduler.py  shell.py
