[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "kopilot-core"
version = "0.4.0"
description = "Kopilot automation framework — bus, scheduler, runtime"
requires-python = ">=3.11"
dependencies = [
    "anyio>=4.0",
    "nats-py>=2.6",
    "apscheduler>=3.10",
    "mysql-connector-python>=8.0",
    "python-dotenv>=1.0",
]

[project.optional-dependencies]
shell = ["ipython>=8.0"]

[project.scripts]
kopilot-query = "kopilot_core.cli:query_main"
kopilot-shell = "kopilot_core.cli:shell_main"